--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_CLIENT_ID=204913639838-4m6soe15a1e1tssnfupuj1mcbd6arj82.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=33811984670-9vb5jo0jkhe5lhtdr3slc94pk0g9o0cv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_REDIRECT_URL=http://localhost:8081/auth/google/callback
+GOOGLE_REDIRECT_URL=http://127.0.0.1:8081/auth/google/callback
